--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body style="background-color: #8080801a;">
+<body style="background-color: #e3e2df;">
   <app-root></app-root>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
