--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-</head>
+<link rel="stylesheet" href="styles.e9e4e8ba6555fecbc8e6.css"></head>
 
 <body style="background-color: #e3e2df;">
   <app-root></app-root>
@@ -21,6 +21,6 @@
 
   </script>
 
-<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="scripts.js" defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
+<script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="styles-es2015.290fd84e3064b8aad958.js" type="module"></script><script src="styles-es5.290fd84e3064b8aad958.js" nomodule defer></script><script src="scripts.4ac83df01d4c11a6e6cf.js" defer></script><script src="main-es2015.403a538ea7120239f734.js" type="module"></script><script src="main-es5.403a538ea7120239f734.js" nomodule defer></script></body>
 
 </html>
