--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>MyCvApp</title>
+  <title>Luat Nguyen</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -21,6 +21,6 @@
 
   </script>
 
-<script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="styles-es2015.290fd84e3064b8aad958.js" type="module"></script><script src="styles-es5.290fd84e3064b8aad958.js" nomodule defer></script><script src="scripts.4ac83df01d4c11a6e6cf.js" defer></script><script src="main-es2015.ec8ce89e4b50f93b936c.js" type="module"></script><script src="main-es5.ec8ce89e4b50f93b936c.js" nomodule defer></script></body>
+<script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="styles-es2015.290fd84e3064b8aad958.js" type="module"></script><script src="styles-es5.290fd84e3064b8aad958.js" nomodule defer></script><script src="scripts.4ac83df01d4c11a6e6cf.js" defer></script><script src="main-es2015.34cfb5131fdefd6cd781.js" type="module"></script><script src="main-es5.34cfb5131fdefd6cd781.js" nomodule defer></script></body>
 
 </html>
