--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" property="og:image" content="./assets/img/portfolio.PNG">
   <title>Luat Nguyen</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,6 +21,6 @@
 
   </script>
 
-<script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="styles-es2015.fa91ed9e04f50b7a951d.js" type="module"></script><script src="styles-es5.fa91ed9e04f50b7a951d.js" nomodule defer></script><script src="scripts.4ac83df01d4c11a6e6cf.js" defer></script><script src="main-es2015.f690657743c182ad674f.js" type="module"></script><script src="main-es5.f690657743c182ad674f.js" nomodule defer></script></body>
+<script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.ef4b1e1fc703b3ff76e3.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="styles-es2015.fa91ed9e04f50b7a951d.js" type="module"></script><script src="styles-es5.fa91ed9e04f50b7a951d.js" nomodule defer></script><script src="scripts.4ac83df01d4c11a6e6cf.js" defer></script><script src="main-es2015.0ae22dd525c00c6d0e02.js" type="module"></script><script src="main-es5.0ae22dd525c00c6d0e02.js" nomodule defer></script></body>
 
 </html>
